[package]
name = "smyklot"
description = "simple discord bot"
license = "MIT"
version = "0.2.10"
authors = ["Bart Smykla <bsmykla@vmware.com>"]
edition = "2018"

[package.metadata.rpm]
package = "smyklot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
smyklot = { path = "/usr/bin/smyklot" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
