[package]
name = "smyklot"
description = "simple discord bot"
license = "MIT"
version = "0.2.20"
authors = ["Bart Smykla <bsmykla@vmware.com>"]
edition = "2018"

[package.metadata.rpm]
package = "smyklot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
smyklot = { path = "/usr/bin/smyklot" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
serde = "1.0.123"
serde_json = "1.0.64"

[dependencies.serenity]
version = "0.10.2"
features = ["framework", "standard_framework"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
